log
Fri 17 May 2024 08:10:35 PM UTC: 
 tests:  0|5
total_score: 0/70
b35e449
Fri 17 May 2024 08:34:35 PM UTC: 
 sudoku.c | 19 ++++++++++++++++++-
 1 file changed, 18 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
5ab8073
Fri 17 May 2024 08:42:32 PM UTC: 
 sudoku.c | 9 ++++-----
 1 file changed, 4 insertions(+), 5 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:59:13: error: ‘new’ undeclared (first use in this function)
   59 |          if(new->sudo[i][j] == 0)
      |             ^~~
sudoku.c:59:13: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
431fad1
Fri 17 May 2024 08:48:34 PM UTC: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
f208809
Fri 17 May 2024 08:48:58 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
7760577
Fri 17 May 2024 08:50:15 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
a10b0c1
Fri 17 May 2024 08:50:44 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
6cc5f7d
Fri 17 May 2024 08:51:59 PM UTC: 
 sudoku.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|0
c8260c9
Fri 17 May 2024 08:57:32 PM UTC: 
 sudoku.c | 19 +++++--------------
 1 file changed, 5 insertions(+), 14 deletions(-)
 tests:  1|5
total_score: 5/70
7bb3f54
Fri 17 May 2024 08:59:33 PM UTC: 
 sudoku.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  0|5
total_score: 0/70
3c17a6a
Fri 17 May 2024 09:01:39 PM UTC: 
 sudoku.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:59:12: error: ‘adj_node’ undeclared (first use in this function)
   59 |         if(adj_node->sudo[0][2] == 0)
      |            ^~~~~~~~
sudoku.c:59:12: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
a1c7c09
Fri 17 May 2024 09:02:36 PM UTC: 
 sudoku.c | 17 +++++++++--------
 1 file changed, 9 insertions(+), 8 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:56:8: error: ‘i’ undeclared (first use in this function)
   56 |    for(i=0;i<9;i++){
      |        ^
sudoku.c:56:8: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c:57:12: error: ‘j’ undeclared (first use in this function)
   57 |        for(j=0;j<9;j++){
      |            ^
Compilation failed
8a63e38
Fri 17 May 2024 09:03:20 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
948fb4d
Fri 17 May 2024 09:05:02 PM UTC: 
 sudoku.c | 19 +++++++++++--------
 1 file changed, 11 insertions(+), 8 deletions(-)
 tests:  0|0
c535da8
Fri 17 May 2024 09:05:54 PM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
dfde57b
Fri 17 May 2024 09:07:16 PM UTC: 
 sudoku.c | 13 ++++++++-----
 1 file changed, 8 insertions(+), 5 deletions(-)
 tests:  2|4
total_score: 15/70
09e4c52
Fri 17 May 2024 09:08:03 PM UTC: 
 sudoku.c | 12 +++++-------
 1 file changed, 5 insertions(+), 7 deletions(-)
 tests:  0|5
total_score: 0/70
3f1f2d8
Fri 17 May 2024 09:16:22 PM UTC: 
 sudoku.c | 11 ++++++-----
 1 file changed, 6 insertions(+), 5 deletions(-)
 tests:  2|4
total_score: 15/70
7bdf6d9
Fri 17 May 2024 09:17:51 PM UTC: 
 sudoku.c | 11 +++++------
 1 file changed, 5 insertions(+), 6 deletions(-)
 tests:  2|4
total_score: 15/70
5ee1d78
Fri 17 May 2024 09:18:28 PM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|4
total_score: 15/70
00e5755
Fri 17 May 2024 09:53:44 PM UTC: 
 sudoku.c | 26 +++++++++++++++++++++++++-
 1 file changed, 25 insertions(+), 1 deletion(-)
test.c: In function ‘is_valid’:
test.c:245:5: error: ‘main’ is normally a non-static function [-Werror=main]
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:262:1: error: expected declaration or statement at end of input
  262 | }
      | ^
test.c:263: error: control reaches end of non-void function [-Werror=return-type]
At top level:
test.c:245:5: error: ‘main’ defined but not used [-Werror=unused-function]
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:7:8: error: ‘_strdup’ defined but not used [-Werror=unused-function]
    7 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
9f12dd9
Fri 17 May 2024 09:55:12 PM UTC: 
 sudoku.c | 44 ++++++++++++++++++++++++++++++++++----------
 1 file changed, 34 insertions(+), 10 deletions(-)
test.c: In function ‘is_valid’:
test.c:245:5: error: ‘main’ is normally a non-static function [-Werror=main]
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:262:1: error: expected declaration or statement at end of input
  262 | }
      | ^
test.c:263: error: control reaches end of non-void function [-Werror=return-type]
At top level:
test.c:245:5: error: ‘main’ defined but not used [-Werror=unused-function]
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:7:8: error: ‘_strdup’ defined but not used [-Werror=unused-function]
    7 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
dc357a8
Fri 17 May 2024 09:55:46 PM UTC: 
 sudoku.c | 3 ---
 1 file changed, 3 deletions(-)
 tests:  2|4
total_score: 15/70
64e48b0
Fri 17 May 2024 11:48:45 PM UTC: 
 sudoku.c | 64 ++++++++++++++++++++++++++++++++++++++++------------------------
 1 file changed, 40 insertions(+), 24 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:93:10: error: ‘seen’ undeclared (first use in this function); did you mean ‘setenv’?
   93 |          seen[i] = 0;
      |          ^~~~
      |          setenv
sudoku.c:93:10: note: each undeclared identifier is reported only once for each function it appears in
test.c:245:5: error: ‘main’ is normally a non-static function [-Werror=main]
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:262:1: error: expected declaration or statement at end of input
  262 | }
      | ^
test.c:263: error: control reaches end of non-void function [-Werror=return-type]
At top level:
test.c:245:5: error: ‘main’ defined but not used [-Werror=unused-function]
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:7:8: error: ‘_strdup’ defined but not used [-Werror=unused-function]
    7 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
af88919
